--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous"></script>
-    <script src="public/scrumtastic.js" type="text/javascript"></script>
+    <script src="public/app.js" type="text/javascript"></script>
   </body>
 </html>
