--- a/public/project-form.html
+++ b/public/project-form.html
@@ -1,10 +1,13 @@
 <h1>Create Project</h1>
 <form>
+  <label for="description">Description:
+    <input name="description" type="text">
+  </label>
+  <label for="imgName"> ImageName:
+    <input name="imgName" type="text">
+  </label>
   <label for="name"> Name:
     <input name="name" type="text">
-  </label>
-  <label for="description">Description:
-    <textearea name="description"></textarea>
   </label>
   <input type="submit">Save Project</input>
 </form>
